--- a/src/App.css
+++ b/src/App.css
@@ -67,15 +67,13 @@
   z-index: 2;
   width: fit-content;
   height: fit-content;
-  background-color: #171518;
   overflow: hidden;
-  -webkit-box-shadow: 0 0 0 7px #171518; 
-  -moz-box-shadow: 0 0 0 7px #171518;
-  box-shadow: 0 0 0 10px #171518;;
+  -webkit-box-shadow: 10px 10px 61px 6px rgba(0,0,0,0.75);
+  -moz-box-shadow: 10px 10px 61px 6px rgba(0,0,0,0.75);
+  box-shadow: 10px 10px 61px 6px rgba(0,0,0,0.75);
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
   border-radius: 20px;
-  border-color: #171518;
 }
 
 .currentStream {
